--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <a name="conferences" class="anchor" href="#conferences"><span class="octicon octicon-link"></span></a>Conferences</h3>
 
 <p>JSConf.US 2014 <a href="jsconf2014.html">On the edge of Node.js and CLR</a></p>
+<p>Seattle Node.js Meetup 2014 <a href="seanode2014.html">Edge.js</a></p>
 
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Open source</h3>
