--- a/seanode2014.html
+++ b/seanode2014.html
@@ -448,7 +448,7 @@ heavyLifting('Node.js', function (error, result) { ... });
           <h2>Shameless plug</h2>
           <p><small>Run custom authorizaton rules in JavaScript or C#</small></p>
           <img style="border: 0; background: transparent" src="https://cloud.githubusercontent.com/assets/822369/4292379/d1084514-3dcc-11e4-982b-b75c4dd79cd5.png" />
-         <p><a href="https://github.com/tjanczuk/edge/blob/master/samples/207_zip.js"><small>Identity as a service company</small></a><p>
+         <p><a href="https://auth0.com"><small>Identity as a service company</small></a><p>
         </section>          
 
         <section>
