--- a/sandbox.html
+++ b/sandbox.html
@@ -66,7 +66,7 @@
         </section>
 
         <section>
-          <h2>programming model 101</h2>
+          <h2>programming 101</h2>
           <h3><span style="color: red">JavaScript function closure</span></h3>
           <pre><code>
 return function (cb) {
@@ -77,7 +77,7 @@ return function (cb) {
         </section>
 
         <section>
-          <h2>programming model 102</h2>
+          <h2>programming 102</h2>
           <h3><span style="color: red">parameterized function</span></h3>
           <pre><code class="javascript">
 // HTTPS POST /tenant1?myname=Auth0
@@ -90,7 +90,7 @@ return function (context, cb) {
         </section>
 
         <section>
-          <h2>programming model 201</h2>
+          <h2>programming 201</h2>
           <h3><span style="color: red">C#</span> via <span style="color: red">Edge.js</span></h3>
           <pre><code class="javascript">
 // HTTPS POST /tenant1?myname=Auth0
