--- a/sandbox.html
+++ b/sandbox.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Edge.js - JSConf.US 2014</title>
+    <title>Sandbox</title>
 
     <meta name="description" content="Sandboxing Node.js code">
     <meta name="author" content="Tomasz Janczuk">
