--- a/sandbox.html
+++ b/sandbox.html
@@ -167,9 +167,10 @@ return function (context, cb) {
           <h1 style="text-shadow: none;">Auth&Oslash; <span style="color: #EB5424">sandbox</span></h1>
           <a href="https://auth0.com"><img style="border: 0; background: transparent; box-shadow: 0 0 0;" src="images/auth0.png"></a>
           <p>
-            <a href="http://tjanczuk.github.io/about" style="color: #44C7F4">Tomasz Janczuk</a> / <a href="http://twitter.com/tjanczuk" style="color: #44C7F4">@tjanczuk</a>
+            <a href="http://tjanczuk.github.io/about" style="color: #44C7F4">Tomasz Janczuk</a> / <a href="http://twitter.com/tjanczuk" style="color: #44C7F4">@tjanczuk</a><br>
           </p>  
-
+          <h2><br>We are <span style="color: #EB5424">hiring</h2>
+          <p><a href="https://auth0.com/jobs">auth0.com/jobs</a></p>
         </section>
 
       </div>
