--- a/sandbox.html
+++ b/sandbox.html
@@ -170,7 +170,7 @@ return function (context, cb) {
             <a href="http://tjanczuk.github.io/about" style="color: #44C7F4">Tomasz Janczuk</a> / <a href="http://twitter.com/tjanczuk" style="color: #44C7F4">@tjanczuk</a><br>
           </p>  
           <h2><br>We are <span style="color: #EB5424">hiring</h2>
-          <p><a href="https://auth0.com/jobs">auth0.com/jobs</a></p>
+          <p><a href="https://auth0.com/jobs" style="color: #44C7F4">auth0.com/jobs</a></p>
         </section>
 
       </div>
