--- a/sandbox.html
+++ b/sandbox.html
@@ -211,7 +211,7 @@ return function (context, cb) {
 
 <!-- <a href="https://auth0.com"><img style="position: absolute; top: 10px; right: 10px; border: 0; width: 50px; heigth: 50px;" src="images/auth0.png" alt="Auth0"></a>        
  -->
-<!-- <iframe allowtransparency="true" frameborder="0" scrolling="no"
+<iframe allowtransparency="true" frameborder="0" scrolling="no"
         src="https://platform.twitter.com/widgets/tweet_button.html?url=http://tjanczuk.github.io/about/sandbox.html&via=tjanczuk&text=Sandboxing Node.js code with @Auth0 sandbox&count=horizontal&hashtags=nodejs,sandbox"
         style="width:130px; height:20px; position: absolute; top: 20px; left: 20px; border: 0;"></iframe>
 
@@ -227,14 +227,14 @@ return function (context, cb) {
   <a href="https://twitter.com/tjanczuk" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @tjanczuk</a>
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>  
 </div>
- -->
-<!--<script type="text/javascript">
+
+<script type="text/javascript">
   (function() {
     var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
     po.src = 'https://apis.google.com/js/platform.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
   })();
-</script>-->
+</script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
