udpate bvp pres

--- a/sandbox.bvp.dec.2014.html
+++ b/sandbox.bvp.dec.2014.html
@@ -48,6 +48,7 @@
 
         <section> 
           <h1 style="text-shadow: none;"><span style="color: #EB5424">Auth&Oslash;</span><br>sandbox-as-a-service</h1>
+          <p><span style="color: #EB5424">disruptive</span> solution to <span style="color: #EB5424">80%</span> of multi-tenant problems</p><br><br>
           <p>
             BVP | December 2014
           </p>  
@@ -62,7 +63,7 @@
 
         <section>
           <h2><span style="color: #EB5424">sandbox provides</span></h2>
-          <h2>data isolation</h2>
+          <h2>data and logic isolation</h2>
           <h2>memory</h2>
           <h2>network</h2>
           <h2>and cpu usage</h2>
@@ -88,13 +89,7 @@ return function (cb) {
         <section>
           <h2>Beyond <span style="color: #EB5424">Auth&Oslash;</span></h2>
           <h2>&nbsp;</h2>
-          <p>for <span style="color: #EB5424">operators of multi-tenant systems</span><br>who require <span style="color: #EB5424">extensibility through code</span><br>
-            Auth&Oslash; sandbox provides a <span style="color: #EB5424">lightweight</span> and <span style="color: #EB5424">authenticated</span> backend-as-a-service</p>
-        </section>
-
-        <section>
-          <h2>synergy with <span style="color: #EB5424">Auth&Oslash;</span> identity services</h2>
-          <img style="border: 0;" src="images/sandbox_auth.png">
+          <p>for <span style="color: #EB5424">operators of multi-tenant systems</span><br>who require <span style="color: #EB5424">extensibility through untrusted code</span><br><br>Auth&Oslash; sandbox provides a <span style="color: #EB5424">lightweight</span> and <span style="color: #EB5424">authenticated</span> backend-as-a-service</p>
         </section>
 
         <section>
@@ -117,12 +112,17 @@ return function (cb) {
         </section>
 
         <section>
+          <h2>synergy with <span style="color: #EB5424">Auth&Oslash;</span> identity services</h2>
+          <img style="border: 0;" src="images/sandbox_auth.png">
+        </section>
+
+        <section>
           <h2>Unlike <span style="color: #EB5424">AWS Lambda</span>...</h2>
           <h2>&nbsp;</h2>
           <p>is <span style="color: #EB5424">authenticated</span> out of the box</p>
           <p>does not require <span style="color: #EB5424">provisioning</span></p>
           <p>supports <span style="color: #EB5424">RPC model</span></p>
-          <p>uses <span style="color: #EB5424">HTTP</span> for ubuquitus access</p>
+          <p>uses <span style="color: #EB5424">HTTP</span> for ubiquitus access</p>
           <p>supports <span style="color: #EB5424">dedicated</span> and <span style="color: #EB5424">on-premise</span> installations</p>
         </section>
 
@@ -137,6 +137,7 @@ return function (cb) {
 
         <section>
           <h1 style="text-shadow: none;"><span style="color: #EB5424">Auth&Oslash;</span><br>sandbox-as-a-service</h1>
+          <p><span style="color: #EB5424">disruptive</span> solution to <span style="color: #EB5424">80%</span> of multi-tenant problems</p><br><br>
           <p>
             <a href="http://tjanczuk.github.io/about" style="color: #44C7F4">Tomasz Janczuk</a> / <a href="http://twitter.com/tjanczuk" style="color: #44C7F4">@tjanczuk</a><br>
           </p>  
@@ -157,6 +158,7 @@ return function (cb) {
         controls: true,
         progress: true,
         history: true,
+        progress: false,
         center: true,
         rollingLinks: false,
 
